--- a/LanLordz/Skins/Dead/dead.css
+++ b/LanLordz/Skins/Dead/dead.css
@@ -8,7 +8,7 @@
 html{padding:0;margin:0;}
 h1,h2,h3,h4,h5{font-family:TwentyEightDaysLater;}
 img{border:none;}
-body{background:Black url(Background.png) no-repeat fixed center top;font-family:Sans-Serif;color:White;text-align:center;padding:0;margin:0;}
+body{background:Black url(Background.jpg) no-repeat fixed center top;font-family:Sans-Serif;color:White;text-align:center;padding:0;margin:0;}
 a:link,a:visited,a:active{color:Red;text-decoration:none;}
 a:hover{color:Red;text-decoration:underline;}
 #surround{padding:0;margin:0 auto 0 auto;width:1000px;}
