--- a/LanLordz/Skins/ClassicLL/lanlordz.css
+++ b/LanLordz/Skins/ClassicLL/lanlordz.css
@@ -277,3 +277,8 @@ input, textarea, select, option, button
     display : inline;
     white-space : nowrap;
 }
+
+.NewsIcon
+{
+    float : right;
+}
