Added the "Contact Us" functionality.

--- a/LanLordz/Views/Shared/_Layout.cshtml
+++ b/LanLordz/Views/Shared/_Layout.cshtml
@@ -56,6 +56,7 @@
      <li class="MenuItem">@Html.ActionLink("News", "ViewNews", "Home")</li>
      <li class="MenuItem">@Html.ActionLink("Forums", "Index", "Forums")</li>
      <li class="MenuItem">@Html.ActionLink("Stats", "Index", "Stats")</li>
+     <li class="MenuItem">@Html.ActionLink("Contact Us", "ContactUs", "Home")</li>
     </ul>
    </div>
    <div id="userinfo">
