Converted the Admin views to Razor.  Turned on MvcBuildViews.
--HG--
rename : LanLordz/Views/Admin/EditGroup.spark => LanLordz/Views/Admin/EditGroup.cshtml
rename : LanLordz/Views/Admin/EditGroups.spark => LanLordz/Views/Admin/EditGroups.cshtml
rename : LanLordz/Views/Admin/EditTitles.spark => LanLordz/Views/Admin/EditTitles.cshtml
rename : LanLordz/Views/Admin/Index.spark => LanLordz/Views/Admin/Index.cshtml
rename : LanLordz/Views/Admin/ResetPassword.spark => LanLordz/Views/Admin/ResetPassword.cshtml
rename : LanLordz/Views/Admin/SendMail.spark => LanLordz/Views/Admin/SendMail.cshtml
rename : LanLordz/Views/Admin/SendMailSuccess.spark => LanLordz/Views/Admin/SendMailSuccess.cshtml

--- a/LanLordz/Views/Admin/ResetPassword.cshtml
+++ b/LanLordz/Views/Admin/ResetPassword.cshtml
@@ -1,18 +1,18 @@
-﻿<content name="title">Reset Password</content>
-<content name="main">
-  <h2>Reset User Password</h2>
+﻿@{
+    ViewBag.Title = "Reset User Password";
+}
+  <h2>@ViewBag.Title</h2>
 
-  # using (Html.BeginForm())
-  # {
-    !{Html.AntiForgeryToken()}
-    !{Html.ValidationSummary()}
+  @using (Html.BeginForm())
+  {
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary()
     <table>
       <tr><td>Username:</td><td><input name="Username" class="UserLookup" /></td></tr>
       <tr><td>Password:</td><td><input name="Password" type="password" /></td></tr>
       <tr><td>Confirm:</td><td><input name="PasswordConfirm" type="password" /></td></tr>
       <tr><td></td><td><input type="submit" value="Reset" /></td></tr>
     </table>
-  # }
+  }
 
-  !{Html.ActionLink("Back to Index", "Index")}
-</content>
+  @Html.ActionLink("Back to Index", "Index")
