Fixed a couple of instances where conversion to Razor did not happen.

--- a/LanLordz/Views/Admin/EditGroup.cshtml
+++ b/LanLordz/Views/Admin/EditGroup.cshtml
@@ -16,7 +16,7 @@
       <tr>
         <td>@Html.UserLink(member.UserID, member.Username)</td>
         <td>
-          <button type="submit" onclick="$('#UserId').val(${member.UserID})">Remove</button>
+          <button type="submit" onclick="$('#UserId').val(@member.UserID)">Remove</button>
         </td>
       </tr>
       }
