--- a/LanLordz/Views/Account/ConfirmSuccess.cshtml
+++ b/LanLordz/Views/Account/ConfirmSuccess.cshtml
@@ -1,6 +1,5 @@
-<content name="title">Email Confirmed</content>
-<content name="headers"></content>
-<content name="main">
+@{
+    ViewBag.Title = "Email Confirmed";
+}
     <h2>Email Confirmed</h2>
     <p>Your email has been successfully confirmed.  Thank you for registering!  You may now enjoy all of the features of the site.</p>
-</content>
