Fixed the layout.

--- a/LanLordz/Views/Shared/_Layout.cshtml
+++ b/LanLordz/Views/Shared/_Layout.cshtml
@@ -44,7 +44,10 @@
  <body id="body">
   <div id="surround">
    <div id="header">
-    <div if="skin != null && !string.IsNullOrEmpty(skin.Banner)" class="HeaderBanner"><img class="HeaderBannerImage" src="@Html.LocalContent(skin.Banner)" alt="Banner" /></div>
+   @if (skin != null && !string.IsNullOrEmpty(skin.Banner))
+   {
+    <div class="HeaderBanner"><img class="HeaderBannerImage" src="@Html.LocalContent(skin.Banner)" alt="Banner" /></div>
+   }
     <div class="HeaderSiteTagline">@controller.Config.SiteTagline</div>
    </div>
    <div id="menu">
@@ -76,13 +79,13 @@
   <script type="text/javascript" src="@Html.LocalContent(js)"></script>
       }
   }
-  <if condition="Controller.Config.UseGoogleAnalytics">
+  @if (controller.Config.UseGoogleAnalytics) {
   <script type="text/javascript">
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
   </script>
   <script type="text/javascript">
       try { var pageTracker = _gat._getTracker('@controller.Config.GoogleAnalyticsAccount'); pageTracker._trackPageview(); } catch (err) { }
   </script>
-  </if>
+  }
  </body>
 </html>
