--- a/LanLordz/Views/Forums/EditPost.cshtml
+++ b/LanLordz/Views/Forums/EditPost.cshtml
@@ -1,6 +1,9 @@
-<viewdata model="LanLordz.Models.CreatePostModel"/>
-<content name="title">Create Post</content>
-<content name="headers">
+@model LanLordz.Models.EditPostModel
+@{
+    ViewBag.Title = "Edit Post";
+}
+@section headers
+{
   <script type="text/javascript">
    //<![CDATA[
    function AddTags(tagName, parameter, innerData) {
@@ -12,17 +15,13 @@
    }
    //]]>
   </script>
-</content>
-<content name="main">
-    <h2>Create Post</h2>
-    # using (Html.BeginForm("Post", "Forums"))
-    # {
-     !{Html.AntiForgeryToken()}
-     <input if="Model.Post != null" name="ReplyTo" type="hidden" value="${Model.Post.PostID}" />
-     <input if="Model.Post == null && Model.Thread != null" name="Thread" type="hidden" value="${Model.Thread.ThreadID}" />
-     <input if="Model.Post == null && Model.Thread == null" name="Forum" type="hidden" value="${Model.Forum.ForumID}" />
+}
+    <h2>@ViewBag.Title</h2>
+    @using (Html.BeginForm())
+    {
+     @Html.AntiForgeryToken()
      <table class="CreatePostTable">
-      <tr><td>Subject:</td><td><input name="Title" type="text" class="EditPostTitleBox" value="${Model.Title}" /> (60 Character Limit)</td></tr>
+      <tr><td>Subject:</td><td><input name="Title" type="text" class="EditPostTitleBox" value="@Model.Post.Title" /> (60 Character Limit)</td></tr>
       <tr>
        <td></td>
        <td>
@@ -41,29 +40,31 @@
       <tr>
        <td>Body:</td>
        <td>
-        <textarea name="Text" id="BodyText" rows="2" cols="20" class="EditPostBodyBox">${Model.Text}</textarea>
+        <textarea name="Text" id="BodyText" rows="2" cols="20" class="EditPostBodyBox">@(Model.Post.Text)</textarea>
        </td>
       </tr>
-      <tr if="Model.UserAccess.CanModerate">
+      @if (Model.UserAccess.CanModerate)
+      {
+      <tr>
        <td>Thread Level:</td>
        <td>
-        !{Html.DropDownList("Level", from level in Model.AvailableThreadLevels
-                                     select new SelectListItem
-                                     {
-                                         Text = level.Name,
-                                         Value = level.Level.ToString(),
-                                         Selected = Model.Thread != null && Model.Thread.Level == level.Level
-                                     }, new { @class = "EditThreadLevelBox"})}
+        @Html.DropDownList("Level", from level in Model.AvailableThreadLevels
+                                    select new SelectListItem
+                                    {
+                                        Text = level.Name,
+                                        Value = level.Level.ToString(),
+                                        Selected = Model.Thread.Level == level.Level
+                                    }, new { @class = "EditThreadLevelBox" })
        </td>
       </tr>
-      <tr if="Model.UserAccess.CanModerate">
+      <tr>
        <td>Lock Thread:</td>
-       <td><input name="Locked" type="checkbox" class="EditThreadLockedBox" !{Model.Thread != null && Model.Thread.IsLocked ? "checked=\"checked\" " : ""}/></td>
+       <td><input name="Locked" type="checkbox" class="EditThreadLockedBox" checked="@(Model.Thread.IsLocked ? "checked" : "")" /></td>
       </tr>
+      }
       <tr>
        <td></td>
        <td><input type="submit" value="Post" class="EditPostSubmitButton" /></td>
       </tr>
      </table>
-    # }
-</content>
+    }
