Added user renaming.

--- a/LanLordz/Views/Admin/Index.cshtml
+++ b/LanLordz/Views/Admin/Index.cshtml
@@ -9,6 +9,7 @@
      <dd>@Html.ActionLink("Edit Titles", "EditTitles")</dd>
      <dd>@Html.ActionLink("Edit Sponsors", "EditSponsors")</dd>
      <dd>@Html.ActionLink("Reset User Passwords", "ResetPassword")</dd>
+     <dd>@Html.ActionLink("Rename User", "RenameUser")</dd>
      <dt>Forum Management</dt>
      <dd>@Html.ActionLink("Edit Forum ACLs", "EditForumAccess")</dd>
      <dt>Event Management</dt>
