--- a/LanLordz/Views/Forums/DeletePost.cshtml
+++ b/LanLordz/Views/Forums/DeletePost.cshtml
@@ -10,7 +10,7 @@
      Are you sure you want to delete this post?<br /><br />
      <input type="submit" value="Yes, Delete" />
      @if (Model.UserAccess.CanModerate) {
-     <input name="DeleteThread" type="checkbox" @(Model.FirstPost ? "checked=\"checked\" " : "")/><label for="DeleteThread">Delete Entire Thread</label><br />
+     <input name="DeleteThread" type="checkbox" @Html.Raw(Model.FirstPost ? "checked=\"checked\" " : "")/><label for="DeleteThread">Delete Entire Thread</label><br />
      }
      </text>
     }
