Converted most of the HTML inputs to MVC helper inputs.

--- a/LanLordz/Views/Account/ChangePassword.cshtml
+++ b/LanLordz/Views/Account/ChangePassword.cshtml
@@ -11,7 +11,7 @@
      if (Model.User == null)
      {
      <table>
-        <tr><td>Username:</td><td><input type="text" name="Username" id="Username" /></td></tr>
+        <tr><td>Username:</td><td>@Html.TextBox("Username")</td></tr>
         <tr><td></td><td><input type="submit" value="Continue" /></td></tr>
      </table>
      }
@@ -24,19 +24,19 @@
      <table>
       @if (controller.CurrentUser != null)
       {
-      <tr><td>Current Password:</td><td><input type="password" name="CurrentPassword" /></td></tr>
+      <tr><td>Current Password:</td><td>@Html.Password("CurrentPassword")</td></tr>
       <tr><td></td><td><hr /></td></tr>
       }
       else if (Model.User.IsEmailConfirmed)
       {
-      <tr><td>Key:</td><td><input type="text" name="SecurityKey" /></td></tr>
+      <tr><td>Key:</td><td>@Html.TextBox("SecurityKey")</td></tr>
       <tr><td></td><td><hr /></td></tr>
       }
       <tr><td>Question:</td><td>@Model.User.SecurityQuestion</td></tr>
-      <tr><td>Answer:</td><td><input type="text" name="SecurityAnswer" /></td></tr>
+      <tr><td>Answer:</td><td>@Html.TextBox("SecurityAnswer")</td></tr>
       <tr><td></td><td><hr /></td></tr>
-      <tr><td>New Password:</td><td><input type="password" name="Password" /></td></tr>
-      <tr><td>Confirm Password:</td><td><input type="password" name="ConfirmPassword" /></td></tr>
+      <tr><td>New Password:</td><td>@Html.Password("Password")</td></tr>
+      <tr><td>Confirm Password:</td><td>@Html.Password("ConfirmPassword")</td></tr>
       @if (Model != null && Model.RequireCaptcha)
       {
       <tr>
