--- a/LanLordz/Views/Admin/ResetPassword.cshtml
+++ b/LanLordz/Views/Admin/ResetPassword.cshtml
@@ -8,9 +8,9 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
     <table>
-      <tr><td>Username:</td><td><input name="Username" class="UserLookup" /></td></tr>
-      <tr><td>Password:</td><td><input name="Password" type="password" /></td></tr>
-      <tr><td>Confirm:</td><td><input name="PasswordConfirm" type="password" /></td></tr>
+      <tr><td>Username:</td><td>@Html.TextBox("Username", null, new { @class = "UserLookup" })</td></tr>
+      <tr><td>Password:</td><td>@Html.Password("Password")</td></tr>
+      <tr><td>Confirm:</td><td>@Html.Password("PasswordConfirm")</td></tr>
       <tr><td></td><td><input type="submit" value="Reset" /></td></tr>
     </table>
   }
