--- a/LanLordz/Views/Crew/DoorPrizes.cshtml
+++ b/LanLordz/Views/Crew/DoorPrizes.cshtml
@@ -60,5 +60,5 @@
      </table>
     }
   <div>
-     <input id="NewPrizeName" type="text" /> <button onclick="Add($('#NewPrizeName').val())">Add Prize</button>
+     @Html.TextBox("NewPrizeName") <button onclick="Add($('#NewPrizeName').val())">Add Prize</button>
   </div>
