--- a/LanLordz/Views/Forums/CreatePost.cshtml
+++ b/LanLordz/Views/Forums/CreatePost.cshtml
@@ -7,7 +7,7 @@
   <script type="text/javascript">
    //<![CDATA[
    function AddTags(tagName, parameter, innerData) {
-    var textarea = document.getElementById("BodyText");
+    var textarea = document.getElementById("Text");
     textarea.focus();
     textarea.value = textarea.value + "[" + tagName + (parameter ? "=" + parameter : "") + "]" + (innerData ? innerData : "") + "[/" + tagName + "]";
    }
@@ -22,18 +22,18 @@
      @Html.AntiForgeryToken()
      if (Model.Post != null)
      {
-     <input name="ReplyTo" type="hidden" value="@Model.Post.PostID" />
+         @Html.Hidden("ReplyTo", Model.Post.PostID)
      }
      if (Model.Post == null && Model.Thread != null)
      {
-     <input name="Thread" type="hidden" value="@Model.Thread.ThreadID" />
+        @Html.Hidden("Thread", Model.Thread.ThreadID)
      }
      if (Model.Post == null && Model.Thread == null)
      {
-     <input name="Forum" type="hidden" value="@Model.Forum.ForumID" />
+        @Html.Hidden("Forum", Model.Forum.ForumID)
      }
      <table class="CreatePostTable">
-      <tr><td>Subject:</td><td><input name="Title" type="text" class="EditPostTitleBox" value="@Model.Title" /> (60 Character Limit)</td></tr>
+      <tr><td>Subject:</td><td>@Html.TextBox("Title", Model.Post.Title, new { @class = "EditPostTitleBox" }) (60 Character Limit)</td></tr>
       <tr>
        <td></td>
        <td>
@@ -52,7 +52,7 @@
       <tr>
        <td>Body:</td>
        <td>
-        <textarea name="Text" id="BodyText" rows="2" cols="20" class="EditPostBodyBox">@Model.Text</textarea>
+        @Html.TextArea("Text", Model.Text, 2, 20, new { @class = "EditPostBodyBox" })
        </td>
       </tr>
       @if (Model.UserAccess.CanModerate)
@@ -71,7 +71,7 @@
       </tr>
       <tr>
        <td>Lock Thread:</td>
-       <td><input name="Locked" type="checkbox" class="EditThreadLockedBox" @Html.Raw(Model.Thread != null && Model.Thread.IsLocked ? "checked=\"checked\" " : "")/></td>
+       <td>@Html.CheckBox("Locked", Model.Thread != null && Model.Thread.IsLocked, new { @class = "EditThreadLockedBox" })</td>
       </tr>
       }
       <tr>
