--- a/LanLordz/Views/Forums/EditPost.cshtml
+++ b/LanLordz/Views/Forums/EditPost.cshtml
@@ -7,7 +7,7 @@
   <script type="text/javascript">
    //<![CDATA[
    function AddTags(tagName, parameter, innerData) {
-    var textarea = document.getElementById("BodyText");
+    var textarea = document.getElementById("Text");
     textarea.focus();
     textarea.value = textarea.value + "[" + tagName + (parameter ? "=" + parameter : "") + "]" + (innerData ? innerData : "") + "[/" + tagName + "]";
    }
@@ -21,7 +21,7 @@
     {
      @Html.AntiForgeryToken()
      <table class="CreatePostTable">
-      <tr><td>Subject:</td><td><input name="Title" type="text" class="EditPostTitleBox" value="@Model.Post.Title" /> (60 Character Limit)</td></tr>
+      <tr><td>Subject:</td><td>@Html.TextBox("Title", Model.Post.Title, new { @class = "EditPostTitleBox" }) (60 Character Limit)</td></tr>
       <tr>
        <td></td>
        <td>
@@ -40,7 +40,7 @@
       <tr>
        <td>Body:</td>
        <td>
-        <textarea name="Text" id="BodyText" rows="2" cols="20" class="EditPostBodyBox">@(Model.Post.Text)</textarea>
+        @Html.TextArea("Text", Model.Post.Text, 2, 20, new { @class = "EditPostBodyBox" })
        </td>
       </tr>
       @if (Model.UserAccess.CanModerate)
@@ -59,7 +59,7 @@
       </tr>
       <tr>
        <td>Lock Thread:</td>
-       <td><input name="Locked" type="checkbox" class="EditThreadLockedBox" checked="@(Model.Thread.IsLocked ? "checked" : "")" /></td>
+       <td>@Html.CheckBox("Locked", Model.Thread.IsLocked, new { @class = "EditThreadLockedBox" })</td>
       </tr>
       }
       <tr>
