Added the ability to create venues.

--- a/LanLordz/Views/Admin/Index.cshtml
+++ b/LanLordz/Views/Admin/Index.cshtml
@@ -14,6 +14,7 @@
      <dd>@Html.ActionLink("Edit Forum ACLs", "EditForumAccess")</dd>
      <dt>Event Management</dt>
      <dd>@Html.ActionLink("Edit Events", "EditEvents")</dd>
+     <dd>@Html.ActionLink("Edit Venues", "Index", "Venues")</dd>
      <dt>Send Mail</dt>
      <dd>@Html.ActionLink("Send Mail To Users", "SendMail")</dd>
     </dl>
