--- a/LanLordz/Views/Venues/Edit.cshtml
+++ b/LanLordz/Views/Venues/Edit.cshtml
@@ -33,7 +33,7 @@
         @Html.LabelFor(model => model.Latitude)
     </div>
     <div class="editor-field">
-        @Html.EditorFor(model => model.Latitude)
+        @Html.TextBoxFor(model => model.Latitude)
         @Html.ValidationMessageFor(model => model.Latitude)
     </div>
 
@@ -41,7 +41,7 @@
         @Html.LabelFor(model => model.Longitude)
     </div>
     <div class="editor-field">
-        @Html.EditorFor(model => model.Longitude)
+        @Html.TextBoxFor(model => model.Longitude)
         @Html.ValidationMessageFor(model => model.Longitude)
     </div>
 
